[gd_scene load_steps=11 format=3 uid="uid://cybqasubwj023"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_fxgwn"]
[ext_resource type="AudioStream" uid="uid://nqpkosjwie5j" path="res://audio/funk-lead-loop-71557.mp3" id="2_l3rur"]
[ext_resource type="AudioStream" uid="uid://b3p2cguho7327" path="res://audio/balloon-pop-2-190091.mp3" id="3_vlkxk"]
[ext_resource type="AudioStream" uid="uid://nbdmdq55tr13" path="res://audio/coin-and-money-bag-4-185265.mp3" id="4_5hjfs"]
[ext_resource type="AudioStream" uid="uid://bha85bm87vxyv" path="res://audio/balloon-inflate-1-184052 (mp3cut.net).mp3" id="5_7tca7"]
[ext_resource type="Script" path="res://scripts/pop_data.gd" id="6_ql5ng"]
[ext_resource type="Script" path="res://scripts/RightDataDisplay.gd" id="7_01law"]
[ext_resource type="FontFile" uid="uid://dipumqrecwc7m" path="res://fonts/Poppins-Black.ttf" id="8_gr5y1"]
[ext_resource type="Texture2D" uid="uid://bjergopx7i83a" path="res://Balloonpoppinganimation--1g4a618w313b0r3t2n/blue-balloon/1.png" id="9_psvcf"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pqwf4"]

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fxgwn")

[node name="BgAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_l3rur")
autoplay = true

[node name="BalloonPopAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vlkxk")

[node name="BalloonSellAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5hjfs")

[node name="BalloonPumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7tca7")

[node name="PopDataDisplay" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.3
anchor_right = 0.3
anchor_bottom = 0.6
offset_right = 0.47998
offset_bottom = -0.288025
grow_vertical = 2
script = ExtResource("6_ql5ng")

[node name="ProfitDataDisplay" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.7
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("7_01law")
metadata/_edit_use_anchors_ = true

[node name="PumpButton" type="Button" parent="."]
material = SubResource("CanvasItemMaterial_pqwf4")
layout_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -147.0
offset_right = -72.0
offset_bottom = -27.0
theme_override_colors/font_color = Color(0.309804, 0.631373, 0.478431, 1)
theme_override_colors/font_hover_color = Color(0.388235, 0.74902, 0.576471, 1)
theme_override_fonts/font = ExtResource("8_gr5y1")
theme_override_font_sizes/font_size = 20
text = "Pump"

[node name="SellButton" type="Button" parent="."]
layout_direction = 1
layout_mode = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -148.0
offset_right = 200.0
offset_bottom = -28.0
theme_override_colors/font_color = Color(0.309804, 0.631373, 0.478431, 1)
theme_override_colors/font_hover_color = Color(0.388235, 0.74902, 0.576471, 1)
theme_override_fonts/font = ExtResource("8_gr5y1")
theme_override_font_sizes/font_size = 20
text = "Sell"

[node name="CurrentBalloonValue" type="RichTextLabel" parent="."]
modulate = Color(0.309804, 0.631373, 0.478431, 1)
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -341.0
offset_top = 26.0
offset_right = -21.0
offset_bottom = 166.0
theme_override_fonts/normal_font = ExtResource("8_gr5y1")
theme_override_font_sizes/normal_font_size = 20
text = "Current Balloon Value: $ 0.00"

[node name="TotalProfit" type="RichTextLabel" parent="."]
modulate = Color(0.309804, 0.631373, 0.478431, 1)
layout_mode = 2
offset_left = 26.0
offset_top = 24.0
offset_right = 346.0
offset_bottom = 164.0
theme_override_fonts/normal_font = ExtResource("8_gr5y1")
theme_override_font_sizes/normal_font_size = 20
text = "Total Profit: $ 0.00

Balloons Left: 30
Balloons Popped: 0
Balloons Sold: 0"

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Balloon" type="Sprite2D" parent="Control"]
texture_filter = 1
scale = Vector2(0.25, 0.25)
texture = ExtResource("9_psvcf")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.921569, 0.921569, 0.921569, 1)
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EodBoarder" type="ColorRect" parent="."]
visible = false
self_modulate = Color(0.34902, 0.34902, 0.34902, 0.921569)
z_as_relative = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EodFill" type="ColorRect" parent="EodBoarder"]
modulate = Color(0.921569, 0.921569, 0.921569, 1)
z_index = 2
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SummaryStats" type="RichTextLabel" parent="EodBoarder/EodFill"]
modulate = Color(0.309804, 0.631373, 0.478431, 1)
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("8_gr5y1")
theme_override_font_sizes/normal_font_size = 20
text = "End of Day 1!

Balloon Sales Statistics:"

[node name="PlayAgainButton" type="Button" parent="EodBoarder/EodFill"]
material = SubResource("CanvasItemMaterial_pqwf4")
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -79.0
offset_right = -13.0
offset_bottom = -15.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.309804, 0.631373, 0.478431, 1)
theme_override_colors/font_hover_color = Color(0.388235, 0.74902, 0.576471, 1)
theme_override_fonts/font = ExtResource("8_gr5y1")
theme_override_font_sizes/font_size = 20
text = "Play Again!"

[connection signal="pressed" from="PumpButton" to="." method="_on_pump_button_pressed"]
[connection signal="pressed" from="SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="pressed" from="EodBoarder/EodFill/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
